--- a/config/version.conf
+++ b/config/version.conf
@@ -1,5 +1,12 @@
 # 工具版本配置
-TOOL_VERSION="1.0.0"
-CONFIG_VERSION="1.0"
+TOOL_VERSION="1.1.0"
+CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
 LAST_UPDATE_CHECK=$(date +%s)
+
+# 更新日志
+# v1.1.0 - 2024年更新
+# - 修复系统信息查询模块的awk语法错误
+# - 增强系统信息查询功能，添加完整系统监控
+# - 优化模块加载机制
+# - 改进错误处理和用户交互
