--- a/config/version.conf
+++ b/config/version.conf
@@ -1,11 +1,15 @@
 # 工具版本配置
-TOOL_VERSION="1.1.1"
+TOOL_VERSION="1.1.2"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
 LAST_UPDATE_CHECK=$(date +%s)
 
 # 更新日志
-# v1.1.0 - 2024年更新
+# v1.1.2 - 2024年更新
+# - 修复菜单选项编号逻辑错误
+# - 修复更新功能文件验证逻辑
+# - 优化模块下载验证条件
+# v1.1.1 - 2024年更新
 # - 修复系统信息查询模块的awk语法错误
 # - 增强系统信息查询功能，添加完整系统监控
 # - 优化模块加载机制
