--- a/config/version.conf
+++ b/config/version.conf
@@ -1,10 +1,15 @@
 # 工具版本配置
-TOOL_VERSION="1.1.2"
+TOOL_VERSION="1.1.3"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
 LAST_UPDATE_CHECK=$(date +%s)
 
 # 更新日志
+# v1.1.3 - 2024年更新
+# - 修复强制更新功能中的模块列表解析错误
+# - 修复菜单显示中的模块描述格式错误
+# - 修复任意键返回功能不稳定的问题
+# - 优化模块加载和错误处理机制
 # v1.1.2 - 2024年更新
 # - 修复菜单选项编号逻辑错误
 # - 修复更新功能文件验证逻辑
