--- a/config/version.conf
+++ b/config/version.conf
@@ -1,20 +1,25 @@
 # 工具版本配置
-TOOL_VERSION="1.1.3"
+TOOL_VERSION="1.1.4"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
 LAST_UPDATE_CHECK=$(date +%s)
 
 # 更新日志
-# v1.1.3 - 2024年更新
+# v1.1.4 - 2025年11月20日更新
+# - 修复菜单显示空白选项问题
+# - 修复更新检查版本号显示错误
+# - 优化版本比较逻辑和错误处理
+# - 更新模块版本号到最新版本
+# v1.1.3 - 2025年11月20日更新
 # - 修复强制更新功能中的模块列表解析错误
 # - 修复菜单显示中的模块描述格式错误
 # - 修复任意键返回功能不稳定的问题
 # - 优化模块加载和错误处理机制
-# v1.1.2 - 2024年更新
+# v1.1.2 - 2025年11月20日更新
 # - 修复菜单选项编号逻辑错误
 # - 修复更新功能文件验证逻辑
 # - 优化模块下载验证条件
-# v1.1.1 - 2024年更新
+# v1.1.1 - 2025年11月20日更新
 # - 修复系统信息查询模块的awk语法错误
 # - 增强系统信息查询功能，添加完整系统监控
 # - 优化模块加载机制
