--- a/config/version.conf
+++ b/config/version.conf
@@ -1,10 +1,13 @@
 # 工具版本配置
-TOOL_VERSION="1.1.5"
+TOOL_VERSION="1.1.6"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
 LAST_UPDATE_CHECK=$(date +%s)
 
 # 更新日志
+# v1.1.6 - 2025年11月20日更新
+# - 修复强制更新所有模块功能异常问题
+# - 修复系统信息查询模块退出问题
 # v1.1.5 - 2025年11月20日更新
 # - 修复清理缓存功能后菜单显示异常问题
 # - 优化清理函数，确保模块配置正确重新加载
