--- a/config/version.conf
+++ b/config/version.conf
@@ -1,10 +1,15 @@
 # 工具版本配置
-TOOL_VERSION="1.1.6"
+TOOL_VERSION="1.1.8"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
 LAST_UPDATE_CHECK=$(date +%s)
 
 # 更新日志
+# v1.1.7 - 2025年11月20日更新
+# - 修复系统信息查询模块退出问题（按回车键无法退出）
+# - 修复更新检查版本号显示错误问题
+# v1.1.8 - 2025年11月20日更新
+# - 修复强制更新所有模块提示"未找到有效的模块配置"的问题
 # v1.1.6 - 2025年11月20日更新
 # - 修复强制更新所有模块功能异常问题
 # - 修复系统信息查询模块退出问题
