--- a/config/version.conf
+++ b/config/version.conf
@@ -1,5 +1,5 @@
 # 工具版本配置
-TOOL_VERSION="1.1.8"
+TOOL_VERSION="1.1.9"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
 LAST_UPDATE_CHECK=$(date +%s)
@@ -10,6 +10,9 @@ LAST_UPDATE_CHECK=$(date +%s)
 # - 修复更新检查版本号显示错误问题
 # v1.1.8 - 2025年11月20日更新
 # - 修复强制更新所有模块提示"未找到有效的模块配置"的问题
+# v1.1.9 - 2025年11月20日更新
+# - 修复更新检查版本号显示错误（显示1.1.6而不是1.1.8）
+# - 优化任意键退出功能，提高响应速度和稳定性
 # v1.1.6 - 2025年11月20日更新
 # - 修复强制更新所有模块功能异常问题
 # - 修复系统信息查询模块退出问题
