--- a/config/version.conf
+++ b/config/version.conf
@@ -1,5 +1,5 @@
 # 工具版本配置
-TOOL_VERSION="1.1.9"
+TOOL_VERSION="1.2.0"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
 LAST_UPDATE_CHECK=$(date +%s)
@@ -13,6 +13,8 @@ LAST_UPDATE_CHECK=$(date +%s)
 # v1.1.9 - 2025年11月20日更新
 # - 修复更新检查版本号显示错误（显示1.1.6而不是1.1.8）
 # - 优化任意键退出功能，提高响应速度和稳定性
+# v1.2.0 - 2025年11月20日更新
+# - 修复显示帮助文档时出现重复"按任意键返回"提示的问题
 # v1.1.6 - 2025年11月20日更新
 # - 修复强制更新所有模块功能异常问题
 # - 修复系统信息查询模块退出问题
