--- a/config/version.conf
+++ b/config/version.conf
@@ -1,5 +1,5 @@
 # 工具版本配置
-TOOL_VERSION="1.2.0"
+TOOL_VERSION="1.2.2"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
 LAST_UPDATE_CHECK=$(date +%s)
@@ -15,6 +15,12 @@ LAST_UPDATE_CHECK=$(date +%s)
 # - 优化任意键退出功能，提高响应速度和稳定性
 # v1.2.0 - 2025年11月20日更新
 # - 修复显示帮助文档时出现重复"按任意键返回"提示的问题
+# v1.2.1 - 2025年11月20日更新
+# - 修复强制更新所有模块时模块下载失败的问题
+# - 优化模块下载逻辑，优先使用本地模块文件
+# v1.2.2 - 2025年11月20日更新
+# - 修正强制更新逻辑错误，恢复正确的强制下载行为
+# - 修复远程仓库无模块文件时的处理逻辑
 # v1.1.6 - 2025年11月20日更新
 # - 修复强制更新所有模块功能异常问题
 # - 修复系统信息查询模块退出问题
