--- a/config/version.conf
+++ b/config/version.conf
@@ -1,7 +1,7 @@
 # 工具版本配置
-TOOL_VERSION="1.2.2"
+TOOL_VERSION="1.2.4"
 CONFIG_VERSION="1.1"
-REPO_BASE_URL="https://raw.githubusercontent.com/han-xi-ya/hanxi-sh/main"
+REPO_BASE_URL="https://gitee.com/han-xi-ya/hanxi-sh/raw/main"
 LAST_UPDATE_CHECK=$(date +%s)
 
 # 更新日志
@@ -21,6 +21,12 @@ LAST_UPDATE_CHECK=$(date +%s)
 # v1.2.2 - 2025年11月20日更新
 # - 修正强制更新逻辑错误，恢复正确的强制下载行为
 # - 修复远程仓库无模块文件时的处理逻辑
+# v1.2.3 - 2025年11月20日更新
+# - 修复检查更新功能卡住问题，为所有curl命令添加超时参数
+# - 设置连接超时10秒，最大超时15秒，避免网络问题导致程序卡死
+# v1.2.4 - 2025年11月20日更新
+# - 修改默认下载源从GitHub改为Gitee，提高国内访问速度
+# - 默认使用https://gitee.com/han-xi-ya/hanxi-sh/raw/main作为更新源
 # v1.1.6 - 2025年11月20日更新
 # - 修复强制更新所有模块功能异常问题
 # - 修复系统信息查询模块退出问题
