--- a/config/version.conf
+++ b/config/version.conf
@@ -1,5 +1,5 @@
 # 工具版本配置
-TOOL_VERSION="1.2.4"
+TOOL_VERSION="1.2.5"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://gitee.com/han-xi-ya/hanxi-sh/raw/main"
 LAST_UPDATE_CHECK=$(date +%s)
@@ -27,6 +27,9 @@ LAST_UPDATE_CHECK=$(date +%s)
 # v1.2.4 - 2025年11月20日更新
 # - 修改默认下载源从GitHub改为Gitee，提高国内访问速度
 # - 默认使用https://gitee.com/han-xi-ya/hanxi-sh/raw/main作为更新源
+# v1.2.5 - 2025年11月21日更新
+# - 修复系统信息查询模块重复提示问题
+# - 移除模块内部退出逻辑，统一由主脚本处理
 # v1.1.6 - 2025年11月20日更新
 # - 修复强制更新所有模块功能异常问题
 # - 修复系统信息查询模块退出问题
