--- a/config/version.conf
+++ b/config/version.conf
@@ -1,5 +1,5 @@
 # 工具版本配置
-TOOL_VERSION="1.2.6"
+TOOL_VERSION="1.2.7"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://gitee.com/han-xi-ya/hanxi-sh/raw/main"
 LAST_UPDATE_CHECK=$(date +%s)
@@ -31,9 +31,14 @@ LAST_UPDATE_CHECK=$(date +%s)
 # - 修复系统信息查询模块重复提示问题
 # - 移除模块内部退出逻辑，统一由主脚本处理
 # v1.2.6 - 2025年11月21日更新
-# - 优化系统信息查询模块性能，减少2-3秒延迟
-# - 网络请求超时从2秒优化到1秒，添加最大超时2秒
-# - 优化进程统计信息获取，减少重复ps命令调用
+- 优化系统信息查询模块性能，减少2-3秒延迟
+- 网络请求超时从2秒优化到1秒，添加最大超时2秒
+- 优化进程统计信息获取，减少重复ps命令调用
+
+v1.2.7 - 2025年11月21日更新
+- 修复进程统计信息显示错误，添加--no-headers参数排除表头
+- 优化网络接口信息获取，使用ip -o命令提高效率
+- 优化连接统计获取，合并ss命令调用减少系统调用
 # v1.1.6 - 2025年11月20日更新
 # - 修复强制更新所有模块功能异常问题
 # - 修复系统信息查询模块退出问题
