--- a/config/version.conf
+++ b/config/version.conf
@@ -1,5 +1,5 @@
 # 工具版本配置
-TOOL_VERSION="1.2.8"
+TOOL_VERSION="1.2.9"
 CONFIG_VERSION="1.1"
 REPO_BASE_URL="https://gitee.com/han-xi-ya/hanxi-sh/raw/main"
 LAST_UPDATE_CHECK=$(date +%s)
@@ -43,6 +43,10 @@ LAST_UPDATE_CHECK=$(date +%s)
 # v1.2.8 - 2025年11月21日更新
 # - 修复version.conf文件注释格式错误，避免bash解析错误
 # - 移除system_info.sh模块中不必要的sleep命令，消除2秒延迟
+
+# v1.2.9 - 2025年11月21日更新
+# - 优化system_info.sh模块网络请求超时设置，从2秒减少到0.5秒
+# - 使用timeout命令替代curl的--max-time参数，提高网络请求响应速度
 # v1.1.6 - 2025年11月20日更新
 # - 修复强制更新所有模块功能异常问题
 # - 修复系统信息查询模块退出问题
